Enhance StandardMatchListGenerator to allow ordering and interspersing
Partial interspersing is also supported.

A wild test appears.